sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:8: error: type mismatch;
 found   : java.awt.Color
 required: Int
      case Color.BLUE => apresBleu +=1
                 ^DutchFlagAlgo:9: error: type mismatch;
 found   : java.awt.Color
 required: Int
      case Color.WHITE => echange(apresBleu,avantBlanc);avantBlanc+=1
                 ^DutchFlagAlgo:9: error: not found: value avantBlanc
      case Color.WHITE => echange(apresBleu,avantBlanc);avantBlanc+=1
                                            ^DutchFlagAlgo:9: error: not found: value avantBlanc
      case Color.WHITE => echange(apresBleu,avantBlanc);avantBlanc+=1
                                                        ^DutchFlagAlgo:10: error: type mismatch;
 found   : java.awt.Color
 required: Int
      case Color.RED => echange(apresBleu,blancRouge);blancRouge+=1;if(blancRouge<apresBlanc){apresBlanc=blancRouge}
                 ^